--- a/FilmModel/WebContent/css/my-css.css
+++ b/FilmModel/WebContent/css/my-css.css
@@ -3,6 +3,10 @@ body {
 	min-height: 500px;
 }
 
+#title {
+	margin-left: 1em;
+}
+
 .ui-button {
 	margin-bottom: 0.5em;
 }
@@ -10,4 +14,22 @@ body {
 .buttonDiv {
 	float: left;
 	width: 33%;
+}
+
+#insert-film-button {
+	margin-top: 1em;
+}
+
+#insertDiv {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 1em;
+}
+
+#searchDiv, #result-div, #working, #insertDiv {
+    width: auto;
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-bottom: 1em;
 }
